--- a/voorstel/MarckxKyana-BPvoorstel.tex
+++ b/voorstel/MarckxKyana-BPvoorstel.tex
@@ -23,7 +23,7 @@
 \academicyear{2023-2024} % TODO: pas het academiejaar aan
 
 % TODO: Werktitel
-\title{Vul hier de voorgestelde titel van je onderzoek in}
+\title{Data Dunk: Beeldanalyse en gebruik van Machine Learning algoritmes voor het identificeren en bijhouden van scores en statistieken in basketbalwedstrijden.}
 
 % TODO: Studentnaam en emailadres invullen
 \author{Kyana Marckx}
@@ -50,7 +50,7 @@
 %   zelf
 %
 \specialisation{AI \& Data Engineering}
-\keywords{Scheme, World Wide Web, $\lambda$-calculus}
+\keywords{Beeldanalyse, Basketbal, Machine Learning, Deep Learning}
 
 \begin{document}
 
