--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -3,22 +3,39 @@
 \section{Introductie}%
 \label{sec:introductie}
 
-Waarover zal je bachelorproef gaan? Introduceer het thema en zorg dat volgende zaken zeker duidelijk aanwezig zijn:
+% Waarover zal je bachelorproef gaan? Introduceer het thema en zorg dat volgende zaken zeker duidelijk aanwezig zijn:
 
-\begin{itemize}
-  \item kaderen thema
-  \item de doelgroep
-  \item de probleemstelling en (centrale) onderzoeksvraag
-  \item de onderzoeksdoelstelling
-\end{itemize}
+% \begin{itemize}
+%   \item kaderen thema
+%   \item de doelgroep
+%   \item de probleemstelling en (centrale) onderzoeksvraag
+%   \item de onderzoeksdoelstelling
+% \end{itemize}
 
-Denk er aan: een typische bachelorproef is \textit{toegepast onderzoek}, wat betekent dat je start vanuit een concrete probleemsituatie in bedrijfscontext, een \textbf{casus}. Het is belangrijk om je onderwerp goed af te bakenen: je gaat voor die \textit{ene specifieke probleemsituatie} op zoek naar een goede oplossing, op basis van de huidige kennis in het vakgebied.
+% Denk er aan: een typische bachelorproef is \textit{toegepast onderzoek}, wat betekent dat je start vanuit een concrete probleemsituatie in bedrijfscontext, een \textbf{casus}. Het is belangrijk om je onderwerp goed af te bakenen: je gaat voor die \textit{ene specifieke probleemsituatie} op zoek naar een goede oplossing, op basis van de huidige kennis in het vakgebied.
 
-De doelgroep moet ook concreet en duidelijk zijn, dus geen algemene of vaag gedefinieerde groepen zoals \emph{bedrijven}, \emph{developers}, \emph{Vlamingen}, enz. Je richt je in elk geval op it-professionals, een bachelorproef is geen populariserende tekst. Eén specifiek bedrijf (die te maken hebben met een concrete probleemsituatie) is dus beter dan \emph{bedrijven} in het algemeen.
+% De doelgroep moet ook concreet en duidelijk zijn, dus geen algemene of vaag gedefinieerde groepen zoals \emph{bedrijven}, \emph{developers}, \emph{Vlamingen}, enz. Je richt je in elk geval op it-professionals, een bachelorproef is geen populariserende tekst. Eén specifiek bedrijf (die te maken hebben met een concrete probleemsituatie) is dus beter dan \emph{bedrijven} in het algemeen.
 
-Formuleer duidelijk de onderzoeksvraag! De begeleiders lezen nog steeds te veel voorstellen waarin we geen onderzoeksvraag terugvinden.
+% Formuleer duidelijk de onderzoeksvraag! De begeleiders lezen nog steeds te veel voorstellen waarin we geen onderzoeksvraag terugvinden.
 
-Schrijf ook iets over de doelstelling. Wat zie je als het concrete eindresultaat van je onderzoek, naast de uitgeschreven scriptie? Is het een proof-of-concept, een rapport met aanbevelingen, \ldots Met welk eindresultaat kan je je bachelorproef als een succes beschouwen?
+% Schrijf ook iets over de doelstelling. Wat zie je als het concrete eindresultaat van je onderzoek, naast de uitgeschreven scriptie? Is het een proof-of-concept, een rapport met aanbevelingen, \ldots Met welk eindresultaat kan je je bachelorproef als een succes beschouwen?
+
+% Het doel van dit onderzoek is het ontwikkelen van een systeem dat in staat is om basketbalwedstrijden te analyseren en statistieken bij te houden. Dit systeem zal gebruik maken van beeldanalyse en machine learning om de wedstrijd te analyseren. Het systeem zal in staat zijn om de score bij te houden, de statistieken van de spelers bij te houden en de wedstrijd te analyseren. Het systeem zal ook in staat zijn om de wedstrijd te streamen naar een platform zoals Twitch of YouTube. 
+
+
+% In het snel evoluerende landschap van basketbal bieden geavanceerde technologieën zoals video-analyse, artificial intelligence, deep learning en machine learning nieuwe mogelijkheden om het spel op een dieper niveau te begrijpen. Dit onderzoek concentreert zich op het verbeteren van het gemak voor tafelofficials en het bieden van geautomatiseerde analyses die waardevol zijn voor spelers en coaches. Handmatige processen voor het bijhouden van scores, spelersbewegingen en statistieken kunnen tijdrovend en foutgevoelig zijn. De centrale vraag is dan ook hoe we geavanceerde technologieën kunnen inzetten om deze processen te verbeteren.
+
+% Het onderzoek heeft als doel een werkend model te ontwikkelen dat in realtime basketbalwedstrijden automatisch scores, spelers, de bal en andere relevante elementen kan identificeren en volgen. Met behulp van camera's en geavanceerde algoritmes willen we een tool creëren die niet alleen tafelofficials ondersteunt bij hun taken, maar ook spelers en coaches voorziet van gedetailleerde statistieken. De uiteindelijke output is een systeem dat in staat is om deze gegevens te visualiseren op een website of te exporteren naar een overzichtelijke Excel-spreadsheet, waardoor de waarde van de verzamelde informatie wordt gemaximaliseerd.
+
+% Met de titel "Data Dunk" omarmen we de belofte van diepgaande inzichten die dit onderzoek biedt door middel van beeldanalyse en het gebruik van machine learning en deep learning algoritmes in de context van basketbalwedstrijden. Dit onderzoek is niet alleen een technologische vooruitgang, maar een strategische stap naar een slimmer en efficiënter basketbalgebeuren voor alle betrokkenen.
+
+
+In de snel evoluerende basketbalomgeving bieden technologieën zoals video-analyse, artificial intelligence, deep learning en machine learning nieuwe inzichten op een dieper niveau van het spel. Dit onderzoek richt zich op het optimaliseren van tafelofficials' taken en het leveren van waardevolle, geautomatiseerde analyses voor spelers en coaches. Handmatige processen voor het registreren van scores, spelersbewegingen en statistieken zijn tijdrovend en foutgevoelig. De kernvraag is hoe geavanceerde technologieën deze processen kunnen verbeteren.
+
+Het onderzoek streeft naar een realtime werkend model dat automatisch scores, spelers, de bal en andere relevante elementen identificeert en volgt tijdens basketbalwedstrijden. Met behulp van camera's en geavanceerde algoritmes trachten we een tool te ontwikkelen die tafelofficials ondersteunt en spelers en coaches voorziet van gedetailleerde statistieken. Het resultaat is een systeem dat deze gegevens visualiseert op een website of exporteert naar een overzichtelijke Excel-spreadsheet, waardoor de waarde van verzamelde informatie wordt gemaximaliseerd.
+
+Onder de titel "Data Dunk" omarmen we de belofte van diepgaande inzichten via beeldanalyse en het gebruik van machine learning en deep learning in basketbal. Dit onderzoek markeert niet alleen technologische vooruitgang, maar is een strategische stap naar een slimmer en efficiënter basketbalgebeuren voor alle betrokkenen.
+
 
 %---------- Stand van zaken ---------------------------------------------------
 
@@ -48,25 +65,71 @@ Je mag deze sectie nog verder onderverdelen in subsecties als dit de structuur v
 \section{Methodologie}%
 \label{sec:methodologie}
 
-Hier beschrijf je hoe je van plan bent het onderzoek te voeren. Welke onderzoekstechniek ga je toepassen om elk van je onderzoeksvragen te beantwoorden? Gebruik je hiervoor literatuurstudie, interviews met belanghebbenden (bv.~voor requirements-analyse), experimenten, simulaties, vergelijkende studie, risico-analyse, PoC, \ldots?
+% Hier beschrijf je hoe je van plan bent het onderzoek te voeren. Welke onderzoekstechniek ga je toepassen om elk van je onderzoeksvragen te beantwoorden? Gebruik je hiervoor literatuurstudie, interviews met belanghebbenden (bv.~voor requirements-analyse), experimenten, simulaties, vergelijkende studie, risico-analyse, PoC, \ldots?
 
-Valt je onderwerp onder één van de typische soorten bachelorproeven die besproken zijn in de lessen Research Methods (bv.\ vergelijkende studie of risico-analyse)? Zorg er dan ook voor dat we duidelijk de verschillende stappen terug vinden die we verwachten in dit soort onderzoek!
+% Valt je onderwerp onder één van de typische soorten bachelorproeven die besproken zijn in de lessen Research Methods (bv.\ vergelijkende studie of risico-analyse)? Zorg er dan ook voor dat we duidelijk de verschillende stappen terug vinden die we verwachten in dit soort onderzoek!
 
-Vermijd onderzoekstechnieken die geen objectieve, meetbare resultaten kunnen opleveren. Enquêtes, bijvoorbeeld, zijn voor een bachelorproef informatica meestal \textbf{niet geschikt}. De antwoorden zijn eerder meningen dan feiten en in de praktijk blijkt het ook bijzonder moeilijk om voldoende respondenten te vinden. Studenten die een enquête willen voeren, hebben meestal ook geen goede definitie van de populatie, waardoor ook niet kan aangetoond worden dat eventuele resultaten representatief zijn.
+% Vermijd onderzoekstechnieken die geen objectieve, meetbare resultaten kunnen opleveren. Enquêtes, bijvoorbeeld, zijn voor een bachelorproef informatica meestal \textbf{niet geschikt}. De antwoorden zijn eerder meningen dan feiten en in de praktijk blijkt het ook bijzonder moeilijk om voldoende respondenten te vinden. Studenten die een enquête willen voeren, hebben meestal ook geen goede definitie van de populatie, waardoor ook niet kan aangetoond worden dat eventuele resultaten representatief zijn.
 
-Uit dit onderdeel moet duidelijk naar voor komen dat je bachelorproef ook technisch voldoen\-de diepgang zal bevatten. Het zou niet kloppen als een bachelorproef informatica ook door bv.\ een student marketing zou kunnen uitgevoerd worden.
+% Uit dit onderdeel moet duidelijk naar voor komen dat je bachelorproef ook technisch voldoen\-de diepgang zal bevatten. Het zou niet kloppen als een bachelorproef informatica ook door bv.\ een student marketing zou kunnen uitgevoerd worden.
 
-Je beschrijft ook al welke tools (hardware, software, diensten, \ldots) je denkt hiervoor te gebruiken of te ontwikkelen.
+% Je beschrijft ook al welke tools (hardware, software, diensten, \ldots) je denkt hiervoor te gebruiken of te ontwikkelen.
 
-Probeer ook een tijdschatting te maken. Hoe lang zal je met elke fase van je onderzoek bezig zijn en wat zijn de concrete \emph{deliverables} in elke fase?
+% Probeer ook een tijdschatting te maken. Hoe lang zal je met elke fase van je onderzoek bezig zijn en wat zijn de concrete \emph{deliverables} in elke fase?
+
+
+\textbf{Data verzameling} \\
+Om succesvol een model te kunnen opstellen en trainen is de eerste stap in het proces voldoende data verzamelen. Dit zal gebeuren door middel van reeds bestaande beeldfragmenten van basketbalwedstrijden. 
+Deze beelden zullen worden verzameld van verschillende bronnen zoals YouTube, officiële sites van basketploegen (zowel nationaal als internationaal), eigen gemaakte beelden, \ldots en zullen bestaan uit video-opnames, waarvan er frames zullen worden genomen, en foto's. 
+De deliverable van deze fase is een verzameling van beelden die zullen worden gebruikt voor het annoteren van de data.
+\\\\
+
+\textbf{Data annotatie} \\
+De verzamelde data zal vervolgens worden geannoteerd. Dit houdt in dat de beelden zullen worden voorzien van labels en bounding boxes die de verschillende elementen in het beeld aanduiden. 
+Deze labels zullen worden toegevoegd aan de hand van een annotatietool. Deze tool zal het mogelijk maken om de beelden te annoteren en de labels en bounding boxes op te slaan in een bestand.
+De deliverable van deze fase is een verzameling van geannoteerde beelden die zullen worden gebruikt voor het trainen van het model.
+\\\\
+
+\textbf{Data splitting} \\
+Nadat alle beelden geannoteerd zijn, is het van groot belang dat de data wordt opgesplitst in een training set en een test set.
+Dit houdt ook in dat alle beelden met hun corresponderrnde labels en bounding boxes in dezelfde set (train of test) moeten terechtkomen zodat ze altijd samenblijven.
+De deliverable van deze fase is een training set en een test set.
+\\\\
+
+\textbf{Data parsing} \\
+Om de data te kunnen gebruiken voor het trainen van het model, moet deze eerst worden geparsed. 
+Dit houdt in dat de data zal worden omgezet naar een formaat dat bruikbaar is voor het trainen van het model.
+De deliverable van deze fase is een geparsede training set en een geparsede test set die gebruikt zal worden door het model.
+\\\\
+
+\textbf{Opstelling TensorFlow model} \\
+Nu dat alle data beschikbaar is en klaar voor gebruik, kan het TensorFlow model worden opgesteld.
+Er zullen verschillende modellen worden opgesteld en getraind om te bepalen welk model het beste resultaat geeft.
+De deliverable van deze fase is een opgesteld TensorFlow model dat klaar is voor training.
+\\\\
+
+\textbf{Model training} \\
+Het opgestelde model zal worden getraind met de geparsede training set. Daarna zal het model ook worden gevalideerd met de geparsede test set.
+De deliverable van deze fase is een getraind model met de gebruikelijke scores voor evaluatie.
+\\\\
+
+\textbf{Model finetuning} \\
+Na het trainen van het model zal het model worden gefinetuned. Dit houdt in dat het model zal worden aangepast om de resultaten te verbeteren.
+De deliverable van deze fase is een gefinetuned model dat klaar is voor gebruik en deployment.
+\\\\
+
+\textbf{Front-end ontwikkeling} \\
+Om het model te kunnen gebruiken, zal er een front-end worden ontwikkeld. Deze front-end zal het mogelijk maken om het model te gebruiken en de resultaten te visualiseren.
+Op deze manier kan het model worden gebruikt door tafelofficials, spelers en coaches om tijdens en achteraf de basketbalwedstrijd informatie en statistieken te kunnen vergaren.
+De deliverable van deze fase is een front-end, kan een website of een Excel-spreadsheet zijn, die het mogelijk maakt om het model te gebruiken en de resultaten te visualiseren.
 
 %---------- Verwachte resultaten ----------------------------------------------
 \section{Verwacht resultaat, conclusie}%
 \label{sec:verwachte_resultaten}
 
-Hier beschrijf je welke resultaten je verwacht. Als je metingen en simulaties uitvoert, kan je hier al mock-ups maken van de grafieken samen met de verwachte conclusies. Benoem zeker al je assen en de onderdelen van de grafiek die je gaat gebruiken. Dit zorgt ervoor dat je concreet weet welk soort data je moet verzamelen en hoe je die moet meten.
+% Hier beschrijf je welke resultaten je verwacht. Als je metingen en simulaties uitvoert, kan je hier al mock-ups maken van de grafieken samen met de verwachte conclusies. Benoem zeker al je assen en de onderdelen van de grafiek die je gaat gebruiken. Dit zorgt ervoor dat je concreet weet welk soort data je moet verzamelen en hoe je die moet meten.
 
-Wat heeft de doelgroep van je onderzoek aan het resultaat? Op welke manier zorgt jouw bachelorproef voor een meerwaarde?
+% Wat heeft de doelgroep van je onderzoek aan het resultaat? Op welke manier zorgt jouw bachelorproef voor een meerwaarde?
 
-Hier beschrijf je wat je verwacht uit je onderzoek, met de motivatie waarom. Het is \textbf{niet} erg indien uit je onderzoek andere resultaten en conclusies vloeien dan dat je hier beschrijft: het is dan juist interessant om te onderzoeken waarom jouw hypothesen niet overeenkomen met de resultaten.
+% Hier beschrijf je wat je verwacht uit je onderzoek, met de motivatie waarom. Het is \textbf{niet} erg indien uit je onderzoek andere resultaten en conclusies vloeien dan dat je hier beschrijft: het is dan juist interessant om te onderzoeken waarom jouw hypothesen niet overeenkomen met de resultaten.
 
