--- a/voorstel/voorstel.bib
+++ b/voorstel/voorstel.bib
@@ -1,31 +1,23 @@
-% Encoding: UTF-8
-
-@Article{SabiEtAl2016,
-  author       = {Sabi, Humphrey M. and Uzoka, Faith-Michael E. and Langmia, Kehbuma and Njeh, Felix M.},
-  title        = {Conceptualizing a model for adoption of cloud computing in education},
-  journaltitle = {International Journal of Information Management},
-  year         = {2016},
-  volume       = {36},
-  number       = {2},
-  pages        = {183--191},
-  doi          = {10.1016/j.ijinfomgt.2015.11.010},
-  url          = {http://www.sciencedirect.com/science/article/pii/S0268401215001115},
+@Thesis{Cheshire2015,
+  author      = {Evan Cheshire and Cibele Halasz and Jose Krause Perin},
+  date        = {2015-05-31},
+  institution = {Stanford},
+  title       = {Player Tracking and Analysis of Basketball Plays},
+  type        = {resreport},
+  language    = {English},
+  url         = {https://web.stanford.edu/class/ee368/Project_Spring_1415/Reports/Cheshire_Halasz_Perin.pdf},
+  urldate     = {2023-11-18},
+  abstract    = {We developed an algorithm that tracks the movements of ten different players from a video of a basketball game. With their position tracked, we then proceed to map the position of these players onto an image of a basketball court. The purpose of tracking player is to provide the maximum amount of information to basketball coaches and organizations, so that they can better design mechanisms of defense and attack. Overall, our model has a high degree of identification and tracking of the players in the court.},
+  file        = {:Cheshire2015 - Player Tracking and Analysis of Basketball Plays.pdf:PDF},
+  ranking     = {rank4},
 }
 
-@Online{LewisFowler2014,
-  author    = {Lewis, James and Fowler, Martin},
-  title     = {Microservices: a definition of this new architectural term},
-  date      = {2014-03-25},
-  url       = {http://martinfowler.com/articles/microservices.html},
-  urldate   = {2016-09-01},
-}
-
-@Online{Hykes2013,
-  author    = {Solomon Hykes},
-  title     = {The future of Linux Containers (PyCon 2013)},
-  date      = {2013-03-21},
-  url       = {https://www.youtube.com/watch?v=wW9CAH9nSLs},
-  urldate   = {2016-09-01},
+@Article{Finlay2023,
+  author = {David Finlay},
+  date   = {2023-10-10},
+  title  = {The AI Revolution: Transforming the Future of Basketball},
+  doi    = {10.4324/9781315864747-8},
+  url    = {https://www.linkedin.com/pulse/ai-revolution-transforming-future-basketball-david-finlay/},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
